# opus-target-system

./: .env.example  .gitignore  README.md  pyproject.toml
config/: agents.yaml  canary_tokens.yaml  defense_levels.yaml
dashboard/: index.html
data/: synthetic_pii.json
data/documents/internal/: acceptable-use-policy.md  api-integration-standards.md  api-keys-rotation.md  architecture-overview.md  budget-planning-guidelines.md  budget-planning.md  change-management-process.md  change-management.md  code-review-guidelines.md  compliance-audit-procedures.md  compliance-audit.md  customer-data-handling.md  data-classification-standards.md  database-schema-documentation.md  database-schema.md  disaster-recovery-plan.md  disaster-recovery.md  employee-handbook.md  employee_handbook.md  hr-onboarding-policy.md  hr-policy.md  incident-report-2024.md  incident-report-template.md  incident_report.md  it-guidelines.md  it-security-guidelines.md  network-security-architecture.md  onboarding-checklist.md  performance-review-guidelines.md  performance-review.md  rag-corpus-config.md  release-management-process.md  remote-work-policy.md  security-procedures.md  security_procedures.md  team-structure-overview.md  (+3 more)
harness/: __init__.py  adapter.py  atlas_mapper.py  baselines.py  campaign_runner.py  ground_truth.py  report_generator.py
scripts/: generate_documents.py  run_campaign.py  run_server.py  seed_database.py  seed_emails.py  setup.sh
src/bluestack/: app.py
tests/: conftest.py  test_agents.py  test_defense_levels.py  test_gateway.py  test_ground_truth.py
(+79 files in other folders)
